--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-papa-parse": "^3.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.7",
     "vuex": "^3.6.2"
