--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "papaparse": "^5.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-papa-parse": "^3.1.0",
