--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.2",
     "papaparse": "^5.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.7",
     "vuex": "^3.6.2"
@@ -23,6 +25,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@mdi/font": "^7.0.96",
+    "@types/vue-markdown": "^2.2.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
