--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "marked": "^4.1.0",
     "papaparse": "^5.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
@@ -26,6 +27,7 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@mdi/font": "^7.0.96",
+    "@types/marked": "^4.0.7",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
