--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.2",
+    "i18next": "^21.9.2",
     "papaparse": "^5.3.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
