--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "axios": "^0.27.2",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.20.0",
-    "core-js": "^3.8.3",
+    "core-js": "^3.25.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "fast-xml-parser": "^4.0.10",
     "marked": "^4.1.0",
     "papaparse": "^5.3.2",
     "register-service-worker": "^1.7.2",
