--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18next": "^21.9.2",
     "marked": "^4.1.0",
     "papaparse": "^5.3.2",
+    "pdf-lib": "^1.17.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
