--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "fast-xml-parser": "^4.0.10",
     "i18next": "^21.9.2",
+    "karma": "^6.4.1",
     "marked": "^4.1.0",
     "papaparse": "^5.3.2",
     "pdf-lib": "^1.17.1",
